--- a/index.html
+++ b/index.html
@@ -290,4 +290,4 @@ In the event of a dispute regarding any breach of security or unauthorized acces
     </p>
 </div>
 
-            <p class="email">Contact us: <a href="mailto:organize.ai.eu@gmail.com">organize.ai.eu@gmail.com</a></p>
+            <p class="email">Contact us: <a href="mailto:info@organize-ai.eu">info@organize-ai.eu</a></p>
